Fixed dashboard distortion caused by a large number of players

--- a/assets/styles/desktop/dashboard.scss
+++ b/assets/styles/desktop/dashboard.scss
@@ -251,7 +251,8 @@ main
 
 		ul
 		{
-			// Liste détaillée
+			// Liste détaillée.
+			height: 10rem;
 			padding: 0.25rem;
 			overflow: auto;
 
